# mamobi

./: estrutura.txt
backend/: .env.example  .gitignore  README.md  app.py  estruturaBack.txt  explicacao-tabelas.txt  package-lock.json  pyproject.toml  requirements.txt
backend/maes_mobilizadoras/: acoes_filter.py  admin_routes.py  api_routes.py  app_factory.py  auth.py  models.py  schemas.py
backend/mamobi/: __init__.py  acoes_filter.py  admin_routes.py  api_routes.py  app_factory.py  limiter.py  notifications.py  schemas.py  seed.py
backend/supabase/migrations/: 20260426130759_extensions_and_helpers.sql  20260426130808_create_users.sql  20260426130810_create_auth_otp.sql  20260426130811_create_event_categories.sql  20260426130813_create_events.sql  20260426130814_create_event_participations.sql  20260426130816_create_notifications.sql  20260426130817_create_notification_reads.sql  20260426130819_create_fcm_tokens.sql  20260426130820_create_sync_queue.sql  20260426130822_rls_policies.sql  20260519000000_create_role_changes.sql  20260606120000_add_events_search_indexes.sql  20260610000000_add_unique_constraint_event_categories_name.sql  20260610000001_fix_users_role_constraint.sql  20260610000002_fix_auth_sync_trigger.sql  (+3 more)
backend/tests/: conftest.py  test_admin.py  test_api_acoes.py  test_api_acoes_participation.py  test_api_categories.py  test_api_list_notifications.py  test_api_notify.py  test_auth.py  test_fcm_endpoint_selenium.py  test_fcm_selenium.py  test_filtro_acoes.py  test_models.py  test_notifications.py  test_profile.py  test_seed.py
(+56 files in other folders)
