[project]
name = "backend-mm-codelab"
version = "0.1.0"
description = "Backend da plataforma de apoio às Mães Mobilizadoras pelo CodeLab"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask==3.1.3",
    "flask-limiter==4.1.1",
    "flask-sqlalchemy==3.1.1",
    "pydantic==2.13.3",
    "pytest==9.0.3",
    "python-dotenv==1.2.2",
    "psycopg2-binary",
]

[tool.setuptools.packages.find]
include = ["maes_mobilizadoras*"]